# SCI

./: .gitignore  CMakeLists.txt  Doxyfile  precompile.cmake
src/: main.cpp  stdafx.h
src/common/: SCIFields.h
src/resources/: Resource.h  ResourceAPI.cpp  ResourceAPI.h  ResourceImpl.cpp  ResourceImpl.h  ResourceMap.cpp  ResourceMap.h  ResourcePackage.cpp  ResourcePackage.h  ResourcePage.cpp  ResourcePage.h
src/resources/entity/: Font.cpp  Font.h
src/tools/: BitRead.h  Decode.cpp  Decode.h  File.cpp  File.h  cDecode.cpp  cDecode.h
